# plim

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Docs.md  LICENSE  NOTICE.md  README.md  TODO.md  api.http  config.yml  docker-compose.yml  justfile
.github/workflows/: build.yml
config/ansible/: small.ini  test.ini  test.yml  test2.yml
config/plans/examples/: ansible-create-remote-ini.yml  ansible-create-remote-yml.yml  ansible-create-with-in-etcd-inv.yml  ansible-create-with-in-etcd.yml  ansible-create-with-ini.yml  ansible-create.yml  ansible-trigger.yml  base64-create.yml  base64-trigger.yml  native-create-activechoice.yml  native-create.yml  native-trigger.yml
config/users/admins/: all.yml
config/users/testers/: squad_one.yml  squad_two.yml
etcd_migrations/: run.sh  test_plan.yml
nginx/: Dockerfile  nginx.conf
plim_front/: .dockerignore  .env.development  .env.production  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
plim_front/src/: App.tsx  main.tsx  store.ts  styles.scss  utils.ts
plim_front/src/__tests__/: store.test.ts
plim_front/src/components/: CommonAlert.tsx  (+11 more)
src/: cmd.rs  config.rs  jwt.rs  main.rs  merge_yml.rs  state.rs
src/handlers/: admin_tools.rs  ansible.rs  authentication.rs  etcd.rs  gitlab.rs  mod.rs  plans.rs  users.rs
src/http_client/: gitlab.rs  mod.rs
src/middleware/: jwt.rs  log_request.rs  mod.rs  role_validate.rs
src/routes/: admin.rs  ansible.rs  auth.rs  etcd.rs  gitlab_ref.rs  mod.rs  pipeline.rs  plans.rs  users.rs
(+23 files in other folders)
